# garlic-inference

./: .gitignore  CMakeLists.txt  LICENSE  README.md  debug_qwen3_moe_ref.py  inference.cpp  power_profiler.py  qwen_test.cpp  qwen_test_fp8.cpp  qwen_test_moe_fp8.cpp  run_hf.py  run_vllm.sh  sft_test.py  top_k_python.py  top_k_test.cpp  vllm_test.py
imgs/: IMG_20260524_162359.jpg:Zone.Identifier
src/: kvcache.h  moe-cache.h  prefetcher.h  profiler.h  tensor.h
src/cpu-ops/: cpu_expert_runtime.h  fp8_expert_cpu.cpp
src/models/: generic_model.h  loader.h  model.cpp  model.h  qwen3.cpp  qwen3.h  qwen3_moe.cpp  qwen3_moe.h
src/models/qwen3/: qwen3.cpp  qwen3.h
src/models/qwen3_moe/: qwen3_moe.cpp  qwen3_moe.h
src/moe-managers/: lru-cache.h  moe-cache.h  mru-cache.h
src/src-cpu/: cpu_expert_runtime.h  fp8_expert_cpu.h
src/src-cuda/: activations.cu  activations.cuh  argmax.cu  argmax.cuh  cuda-common.cuh  cutlass-runner.cu  cutlass-runner.cuh  embedding.cu  embedding.cuh  fattn.cu  fattn.cuh  kvcache.cu  mat-ops.cu  mat-ops.cuh  moe.cu  moe.cuh  norm.cu  norm.cuh  quant.cu  quant.h  rope.cu  rope.cuh  simple-ops.cu  simple-ops.cuh  tensor.cu
src/src-cuda/activations/: activations.cuh  silu.cu
src/src-cuda/mat-ops/: mat-ops.cu  mat-ops.cuh
src/src-cuda/mat-ops/gemm/: gemm-fp8.cu  gemm.cu
src/src-cuda/mat-ops/grouped-gemm/: grouped-gemm-fp8.cu
src/src-cuda/mat-ops/simple-ops/: hadamard.cu  matrix-add.cu
src/src-cuda/moe/: moe.cuh
src/src-cuda/quantization/: quant.cu  quant.h
src/src-cuda/reductions/: argmax.cuh  reductions.cu  reductions.cuh
src/src-cuda/simple-ops/: simple-ops.cu  simple-ops.cuh
src/tokenizers/: README.md  bpe.cpp  bpe.h
